# mppi-tf

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  RNN-AUV.py  TODO.md  clean-bag.py  compare-tf-torch.py  metrics_info.ipynb  requirements.txt  run_controller.py  run_data_processing.py  run_model.py  run_sweep_agent.py  run_tests.py  run_training.py  run_training_v2.py  test.py  tf-run.py  tf-train.py  torch-run.py  torch-train.py  train-torch.py
bash/: experiment.sh
config/: point_mass1d.yaml  point_mass2d.yaml  point_mass3d.yaml
config/controller/: bluerov.default.yaml  lagged-1.yaml  lagged-2.yaml  lagged-3.yaml  lagged-4.yaml  lagged.default.yaml  marine_paper.default.yaml  pypose.default.yaml  rexrov2.default.yaml  rexrov2.torch.yaml  state.default.yaml
config/envs/: bluerov.default.yaml  falcon_vaarst.yaml  point_mass.default.yaml  point_mass1d.yaml  point_mass2d.yaml  point_mass3d.yaml  uuv_sim.default.yaml
config/models/: auv_lagged_1_bluerov_speed_torch.yaml  auv_lagged_2_bluerov_speed_torch.yaml  auv_lagged_3_bluerov_speed_torch.yaml  auv_lagged_4_bluerov_speed_torch.yaml  auv_lagged_speed_torch.yaml  auv_nn_model.yaml  auv_nn_model_euler.yaml  auv_nn_model_quat.yaml  bluerov.yaml  falcon_vaarst.default.yaml  nn_model.default.yaml  point_mass_model.default.yaml  rexrov2.default.yaml  rexrov2.diag.yaml  rnn.default.yaml
config/tasks/: back.yaml  down.yaml  elipse3d_task.default.yaml  elipse_task.default.yaml  elipse_task2d.yaml  forward.yaml  marine_elipse.yaml  marine_static.yaml  static.default.yaml  static_cost.default.yaml  static_cost_auv.yaml  static_cost_quat_auv.yaml  static_cost_quat_auv_obs.yaml  static_pypose.default.yaml  static_task1d.yaml  static_task2d.yaml  static_task3d.yaml  up.yaml  yaw.yaml
config/tasks/vaarst_trials/: static_task1.yaml
config/training/: debug.yaml  lstm.default.yaml  nn.default.yaml  rnn.default.yaml
config/training/model_search/: nn.yaml  (+7 more)
cpp_test/: CMakeLists.txt  run_model.cpp
envs/: point_mass1d.xml  point_mass2d.xml  point_mass3d.xml
include/: controller_base.hpp  cost_base.hpp  data_base.hpp  learning_base.hpp  mj_env.hpp  model_base.hpp  utile.hpp
model_config/: rexrov-auv.yaml  rexrov-h3.yaml  rexrov-h4.yaml
scripts/: auv_model.py  bluerovTrain.py  controller.py  controller_base.py  cost.py  cost_base.py  el_tg.py  elipse_cost.py  gen_config.py  getters.py  learn.ipynb  learner.py  log_straight.py  logger.py  main.py  model.onnx  model.py  model_base.py  network_utils.py  nn_model.py  notes.md  point_mass_model.py  run_controller.py  save_rng_sim.py  scripted_controller.pt  simulation.py  static_cost.py  test.py  utile.py  utils.py  verify_models.py
scripts/clean_src/: controller.py  cost.py  datatype.py  model.py  test_controller.py  test_cost.py  test_datatype.py  test_model.py  utile.py
scripts/controllers/: controller_base.py  mppi_base.py
scripts/costs/: cost_base.py  elipse_cost.py  static.py
scripts/experiments/: bluerovTrain.py  experiment.py  plot_trained.py
scripts/inputs/: ControllerInput.py  ModelInput.py
scripts/learners/: learner_base.py
scripts/misc/: test.py
scripts/models/: auv_model.py  auv_torch.py  fossen.py  fossen_auv.py  model_base.py  model_utils.py  nn_auv.py  nn_auv_v2.py  nn_model.py  nn_utils.py  point_mass_model.py  rnn_auv.py  test_auv.py
scripts/observers/: observer_base.py
scripts/src/: controller.py  cost.py  learner.py  model.py
scripts/src_torch/: prof_torch.py  test_main.py  torch-controller.ipynb  utils.py
scripts/test/: test_cont_input.py  test_controller.py  test_costs.py  test_models.py  test_utile.py
scripts/training/: datasets.py  learning_utils.py  loss_fct.py  training_utils.py
scripts/training_v2/: datasets.py  training_utils.py
scripts/utils/: learning_utils.py  utils.py
src/: controller_base.cpp  cost_base.cpp  data_base.cpp  main.cpp  mj_env.cpp  mj_pm_env.cpp  model_base.cpp  utile.cpp
test/: test_controller.cpp  test_cost.cpp  test_model.cpp  test_utile.cpp
tests/: test_controllers.py  test_costs.py  test_datasets.py  test_inputs.py  test_integrate.py  test_loss.py  test_models.py  test_training.py  test_training_utils.py
train_configs/: bluerov2-h1.yaml  bluerov2-h2.yaml  bluerov2-h3.yaml  bluerov2-h4.yaml  foo.yaml  lieTorch.yaml  rexrov-h3.yaml  rexrov-h4.yaml  torch_hist.yaml
(+34 files in other folders)
